--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,63 @@
     --primario: #ffc107;
     --secundario: #0097a7;
     --gris: #757575;
+    --gris-claro: #Dfe9f3;
 }
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 body {
     font-size: 16px; /*1rem = 10px*/
     font-family: 'Comic Neue', cursive;
+    background-image: linear-gradient(to top, var(--gris-claro)0%, var(--blanco) 100%)
 }
-.title {
+
+h1 {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1,h2,h3 {
     text-align: center;
+}
+
+.boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
     font-weight: bold;
+    border-radius: .5rem;
+    width: 70%;
+    text-align: center;
+}
+
+.boton:hover {
+    cursor: pointer;
+}
+
+.sombra {
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(125,123,125,0.81);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(125,123,125,0.81);
+    box-shadow: 0px 5px 15px 0px rgba(125,123,125,0.81);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 2rem;
 }
 
 .nav-bg {
@@ -38,7 +83,7 @@ body {
     text-decoration: none;
     font-weight: bold;
     font-size: 2rem;
-    padding: 2rem;
+    padding: 2rem 2rem;
 }
 
 .nav-prin a:hover {
@@ -46,9 +91,151 @@ body {
     color:var(--negro);
 }
 
-@media (min-width: 768px) {
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 41rem;
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.contenido-hero{
+    position: absolute;
+    background-color: rgba(0,0,0, .6); /*anterior*/
+    background-color: rgba(0 0 0 / 60%); /*nueva*/
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--blanco)
+}
+
+.ubicacion {
+    display: flex;
+    align-items: flex-end;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.flex {
+    display:flex;
+}
+
+.rigth-align {
+    justify-content: flex-end;
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+}
+
+.servicio p {
+    line-height: 2rem;
+    font-weight: normal;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    border-radius: 50%;
+    background-color: var(--primario);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.formulario {
+    background-color: var(--gris);
+    width: min(80rem, 100%); /*utilizar el valor mas pequeño*/
+    margin: auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+@media (min-width: 760px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto, 20rem;
+        column-gap: 1rem;
+    }
+    
+    .campos:nth-child(3),
+    .campos:nth-child(4){
+        grid-column: 1/3;
+    }
+}
+
+.campos {
+    margin-bottom: 1rem;
+
+}
+
+.campos label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block
+}
+
+/* .campos input [type=text] */
+.campos textarea {
+    height: 20rem;
+}
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+@media (min-width: 760px) {
     .nav-prin {
         flex-direction: row;
         justify-content: space-between;
+    }
+    .boton {
+        width: auto;
+        border: none;
+    }    
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /*1fr es lo mismo que 33%*/
+        /* grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 1fr 1fr 1fr; */    
+        /* grid: 20rem 20rem/ 30rem 30rem */
+        column-gap: 1rem;
+    }
+    .w-100{
+        width:auto;
     }
 }
